Strat recipe unlock implementation